@@ -2,6 +2,8 @@ CHANGELOG
 
 When		Who		What
 ======================================================================================
+2017-01-25 	Richard Forth   Fixed #88 Unable to determine whether Apache is using 
+				worker or prefork
 2017-01-25 	Richard Forth   Fixed #84 Unable to open pidfile.
 				- Changed up the logic to check if the
 				setting is in fact a file BEFORE 'guessing'.
